--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "swoole/ide-helper": "@dev",
         "ext-mbstring": "*",
         "swlib/saber": "^1.0",
-        "doctrine/annotations": "^1.8",
+        "doctrine/annotations": "1.8",
         "ext-json": "*",
         "ext-posix": "*",
         "ext-ctype": "*"
