--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "high-performance intelligent assistant",
     "minimum-stability": "stable",
     "license": "proprietary",
-    "version": "1.3.0",
+    "version": "1.3.1",
     "authors": [
         {
             "name": "whale",
@@ -22,12 +22,16 @@
         "ext-json": "*",
         "ext-posix": "*",
         "ext-ctype": "*",
-        "nikic/php-parser": "^4.4"
+        "nikic/php-parser": "^4.4",
+        "ext-pdo": "*"
     },
     "repositories": {
         "packagist": {
             "type": "composer",
             "url": "https://mirrors.aliyun.com/composer/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.1"
     }
 }
