--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "high-performance intelligent assistant",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "1.3.2",
+    "version": "1.4.0",
     "authors": [
         {
             "name": "whale",
@@ -15,6 +15,7 @@
         }
     ],
     "require": {
+        "php": ">=7.2",
         "swoole/ide-helper": "@dev",
         "ext-mbstring": "*",
         "swlib/saber": "^1.0",
@@ -22,7 +23,8 @@
         "ext-json": "*",
         "ext-posix": "*",
         "ext-ctype": "*",
-        "ext-pdo": "*"
+        "ext-pdo": "*",
+        "psy/psysh": "@stable"
     },
     "repositories": {
         "packagist": {
