--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "zhamao/framework",
-    "description": "high-performance intelligent assistant",
+    "description": "High performance QQ robot and web server development framework",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "1.5.1",
+    "version": "1.5.2",
     "authors": [
         {
             "name": "whale",
