--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "High performance QQ robot and web server development framework",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "2.0.0-a2",
+    "version": "2.0.0-b1",
     "authors": [
         {
             "name": "whale",
