--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "High performance QQ robot and web server development framework",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "2.0.0-b3",
+    "version": "2.0.0-b4",
+    "extra": {},
     "authors": [
         {
             "name": "whale",
@@ -21,30 +22,24 @@
     ],
     "require": {
         "php": ">=7.2",
-        "ext-mbstring": "*",
         "doctrine/annotations": "~1.10",
         "ext-json": "*",
-        "ext-posix": "*",
-        "ext-ctype": "*",
         "psy/psysh": "@stable",
+        "symfony/polyfill-ctype": "^1.20",
+        "symfony/polyfill-mbstring": "^1.20",
         "symfony/console": "^5.1",
-        "symfony/polyfill-ctype": "^1.18",
         "zhamao/connection-manager": "*@dev",
         "zhamao/console": "*@dev",
         "zhamao/config": "*@dev",
         "zhamao/request": "*@dev",
-        "symfony/routing": "^5.1"
-    },
-    "suggest": {
-        "ext-pdo": "Allows framework connecting with mysql server",
-        "ext-redis": "Allows framework connecting with redis server",
-        "ext-inotify": "Enable file watcher feature in framework"
+        "symfony/routing": "^5.1",
+        "symfony/polyfill-php80": "^1.20"
     },
     "autoload": {
         "psr-4": {
-            "Custom\\": "src/Custom",
             "ZM\\": "src/ZM",
-            "Module\\": "src/Module"
+            "Module\\": "src/Module",
+            "Custom\\": "src/Custom"
         },
         "files": [
             "src/ZM/global_functions.php"
@@ -61,11 +56,5 @@
     "require-dev": {
         "phpunit/phpunit": "^9.3",
         "swoole/ide-helper": "@dev"
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "/Users/jerry/project/git-project/zhamao-console"
-        }
-    ]
+    }
 }
