update to 2.0.0-b5 version set modules config to array add subdir index.html update Example of Hello.php add Exception tester for TimerMiddleware.php add keyword for @CQCommand rename OnWorkerStart.php to OnStart.php remove SwooleEventAfter.php rename HandleEvent.php to SwooleHandler.php set ZMRobot callback mode default to true add getNextArg() and getFullArg() add EventDispatcher.php logger set Exception all based from ZMException fix recursive bug for Response.php add single_bot_mode add SingletonTrait.php add bot() function

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "High performance QQ robot and web server development framework",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "2.0.0-b4",
+    "version": "2.0.0-b5",
     "extra": {},
     "authors": [
         {
@@ -34,6 +34,10 @@
         "zhamao/request": "*@dev",
         "symfony/routing": "^5.1",
         "symfony/polyfill-php80": "^1.20"
+    },
+    "suggest": {
+        "ext-ctype": "*",
+        "ext-mbstring": "*"
     },
     "autoload": {
         "psr-4": {
