update to 2.0.0-b9 version fix a little bug

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,8 @@
         "symfony/polyfill-mbstring": "^1.20",
         "symfony/console": "^5.1",
         "zhamao/connection-manager": "*@dev",
-        "zhamao/console": "*@dev",
-        "zhamao/config": "*@dev",
+        "zhamao/console": "^1.0",
+        "zhamao/config": "^1.0",
         "zhamao/request": "*@dev",
         "symfony/routing": "^5.1",
         "symfony/polyfill-php80": "^1.20"
