--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "High performance QQ robot and web server development framework",
     "minimum-stability": "stable",
     "license": "Apache-2.0",
-    "version": "2.0.0-b5",
+    "version": "2.0.0",
     "extra": {},
     "authors": [
         {
@@ -41,9 +41,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ZM\\": "src/ZM",
-            "Module\\": "src/Module",
-            "Custom\\": "src/Custom"
+            "ZM\\": "src/ZM"
         },
         "files": [
             "src/ZM/global_functions.php"
