--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,26 +52,26 @@ copyright: 'Copyright &copy; 2019 - 2020 CrazyBot Team&nbsp;&nbsp;&nbsp;&nbsp;&n
 nav:
   - 指南:
       - 介绍: index.md
-      - 安装框架: guide/安装.md
-      - 快速上手（机器人篇）: guide/快速上手-机器人.md
-      - 快速上手（HTTP篇）: guide/快速上手-http.md
-      - 选择聊天机器人实例: guide/OneBot实例.md
-      - 基本配置: guide/基本配置.md
-      - 编写模块: guide/编写模块.md
-      - 注册事件响应: guide/注册事件响应.md
+      - 安装框架: guide/installation.md
+      - 快速上手（机器人篇）: guide/quickstart-robot.md
+      - 快速上手（HTTP篇）: guide/quickstart-http.md
+      - 选择聊天机器人实例: guide/onebot-choose.md
+      - 基本配置: guide/basic-config.md
+      - 编写模块: guide/write-module.md
+      - 注册事件响应: guide/register-event.md
   - 事件和注解:
       - 事件和注解: event/index.md
-      - 机器人注解事件: event/机器人注解事件.md
-      - HTTP 路由注解事件: event/路由注解事件.md
-      - 框架核心注解事件: event/框架注解事件.md
-      - 中间件注解: event/中间件.md
-      - 自定义注解: event/自定义注解.md
-      - 事件分发器: event/事件分发器.md
+      - 机器人注解事件: event/robot-annotations.md
+      - HTTP 路由注解事件: event/route-annotations.md
+      - 框架核心注解事件: event/framework-annotations.md
+      - 中间件注解: event/middleware.md
+      - 自定义注解: event/custom-annotations.md
+      - 事件分发器: event/event-dispatcher.md
   - 框架组件:
       - 框架组件: component/index.md
-      - 机器人 API: component/机器人API.md
-      - CQ 码（多媒体消息）: component/CQ码.md
-      - 上下文: component/上下文.md
+      - 机器人 API: component/robot-api.md
+      - CQ 码（多媒体消息）: component/cqcode.md
+      - 上下文: component/context.md
   - 进阶开发:
       - 进阶开发: advanced/index.md
       - 从 v1 升级: advanced/to-v2.md
