--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,9 @@ theme:
   logo: assets/logos.png
   favicon: assets/favicon.png
   language: zh
+  palette:
+    primary: deep orange
+    accent: deep orange
   features:
     - navigation.tabs
 extra_javascript:
