update to 2.2.5 version again add transaction for SpinLock.php add getAllCQ() for CQ.php fix CQ bug update docs

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,7 @@
         ]
     },
     "require-dev": {
-        "swoole/ide-helper": "@dev"
+        "swoole/ide-helper": "@dev",
+        "phpunit/phpunit": "^9.5"
     }
 }
