--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -17,6 +17,7 @@ jobs:
         # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: zhamao-robot/docs-v2-pages
           CUSTOM_DOMAIN: docs-v2.zhamao.me
           CONFIG_FILE: mkdocs.yml
           EXTRA_PACKAGES: build-base
