--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,6 +12,6 @@ jobs:
       - uses: shimataro/ssh-key-action@v2
         with:
           python-version: 3.x
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.VPS_SSH }}
       - run: pip install mkdocs-material
       - run: mkdocs build -d distribute && cd distribute/ && ssh root@139.199.77.130 rm -rf /var/www/docs_v2/\* && scp -r ./* root@139.199.77.130:/var/www/docs_v2/
