--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,9 @@
     },
     "autoload": {
         "psr-4": {
-            "ZM\\": "src/ZM"
+            "ZM\\": "src/ZM",
+            "Module\\": "src/Module",
+            "Custom\\": "src/Custom"
         },
         "files": [
             "src/ZM/global_functions.php"
