update composer and roll to 396(v2.3.3)

--- a/composer.json
+++ b/composer.json
@@ -40,9 +40,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ZM\\": "src/ZM",
-            "Module\\": "src/Module",
-            "Custom\\": "src/Custom"
+            "ZM\\": "src/ZM"
         },
         "files": [
             "src/ZM/global_functions.php"
