update to v2.4.0 (build 400) add systemd:generate command add check:config command init command add `--force|-F` option add MessageUtil function `addShortCommand()` clear debug message

--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,10 @@
         "symfony/polyfill-mbstring": "^1.20",
         "symfony/console": "^5.1",
         "symfony/routing": "^5.1",
-        "zhamao/connection-manager": "*@dev",
-        "zhamao/console": "^1.0",
+        "zhamao/console": "^1.0.10",
         "zhamao/config": "^1.0",
-        "zhamao/request": "*@dev"
+        "zhamao/request": "^1.1",
+        "zhamao/connection-manager": "^1.0"
     },
     "suggest": {
         "ext-ctype": "*",
