update to 2.4.2 version (build 402) change WORKING_DIR constant change logic of savePersistence() add LightCache addPersistence() and removePersistence() method add `./zhamao` command

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,4 +109,5 @@ nav:
   - 更新日志:
       - 更新日志（v2）: update/v2.md
       - 更新日志（v1）: update/v1.md
+      - 配置文件更新日志: update/config.md
   - <u>炸毛框架 v1</u>: https://docs-v1.zhamao.xin/
