update to 2.4.3 version (build 403) add config: swoole.max_wait_time (default 5) add constant MAIN_WORKER add getExpireTS() for LightCache fix savePersistence() bug add zm_go() to prevent errors

--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,9 @@
         "zhamao/connection-manager": "^1.0"
     },
     "suggest": {
-        "ext-ctype": "*",
-        "ext-mbstring": "*"
+        "ext-ctype": "Use C/C++ extension instead of polyfill will be more efficient",
+        "ext-mbstring": "Use C/C++ extension instead of polyfill will be more efficient",
+        "league/climate": "Display columns and status in terminal"
     },
     "autoload": {
         "psr-4": {
