update to 2.4.4 version (build 405) change requirements: add pcntl as required extension update docs

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "php": ">=7.2",
         "ext-json": "*",
         "ext-posix": "*",
+        "ext-pcntl": "*",
         "doctrine/annotations": "~1.10",
         "psy/psysh": "@stable",
         "symfony/polyfill-ctype": "^1.20",
