update to build 407 change daemon command from system to Process::kill add master_pid for motd information add option --preview delete server_event_handler_class and use process go-cqhttp-down.sh script add arm64 support add ./zhamao support change build-runtime.sh to install-runtime.sh add option --disable-safe-exit adjust some Console output set start script using /bin/sh for supporting auto searching php and framework

--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,7 @@
         "zhamao/console": "^1.0.10",
         "zhamao/config": "^1.0",
         "zhamao/request": "^1.1",
-        "zhamao/connection-manager": "^1.0",
-        "league/climate": "^3.7"
+        "zhamao/connection-manager": "^1.0"
     },
     "suggest": {
         "ext-ctype": "Use C/C++ extension instead of polyfill will be more efficient",
@@ -45,9 +44,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ZM\\": "src/ZM",
-            "Module\\": "src/Module",
-            "Custom\\": "src/Custom"
+            "ZM\\": "src/ZM"
         },
         "files": [
             "src/ZM/global_functions.php"
